Fix overlay div bug
- The overlay div was covering all ship option buttons from being clicked

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -200,6 +200,7 @@ body {
     width: 60vw;
     height: 60vh;
     opacity: 0;
+    pointer-events: none;
 }
     #overlay-icon {
         width: 5vw;
@@ -216,6 +217,28 @@ body {
 
     padding: 1vw;
 }
+
+    #button-wrapper {
+        display: flex;
+        justify-content: space-between;
+        width: 80%;
+    }
+
+    #randomizer {
+        width: 3rem;
+        height: 3rem;
+        border: none;
+        border-radius: 50%;
+        background-color: transparent;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    #randomizer-icon {
+        position: absolute;
+        width: 3rem;
+        height: 3rem;
+    }
 
     .switches-container {
         width: 16rem;
@@ -360,7 +383,7 @@ body {
         gap: 10px;
     }
 
-    .setup-option {
+    .setup-option, #done-btn {
         display: flex;
         justify-content: space-evenly;
         align-items: center;
@@ -372,7 +395,7 @@ body {
         padding: 0.25vw;
     }
 
-    .setup-option:hover {
+    .setup-option:hover, #done-btn:hover {
         background-color: oklch(40.167% 0.00005 271.152 / 0.294);
     }
 
